# MODULE_PROGRAM

./: CMakeLists.txt  README.md  dump.rdb  start_module.sh  test.py
include/: mng_lib.h
software/: communication_mng.cpp  hardware_mng.cpp  interface.cpp  redis_mng.cpp  socket_interface.cpp  test.cpp
src/: mng_lib.cpp
